# Magic-ASCII-Art

./: .gitignore  App.cpp  App.h  AppConfig.h  CMakeLists.txt  FileType.h  README.md  main.cpp
converter/: BMPToASCII.cpp  BMPToASCII.h  ImageToASCII.cpp  ImageToASCII.h  JPEGtoASCII.cpp  JPEGtoASCII.h  PngToAscii.cpp  PngToAscii.h
libraries/EasyBMP/: EasyBMP_BMP.h
util/: RGBGreyScaleConverter.h  UtilityCollection.h
